# ansiconv

./: AUTHORS  CMakeLists.txt  ChangeLog  INSTALL  Makefile.am  NEWS  README  TODO  configure.in
php/: CREDITS  ansiconv.c  config.h.in  config.m4  config.w32  php_ansiconv.h
php/tests/: 001.phpt
src/: Makefile.am  ansi2gif.c  ansi2png.c  ansiconv.c  ansiconv.h  ansiparse.c  bin2gif.c  bin2png.c  convert.c  dosfont.c  dosfont.h  idf2gif.c  idf2png.c  list.c  list.h  main.c  output.c  output.h  outputgif.c  outputgif.h  outputlo.c  outputpng.c  outputpng.h  outputpnglo.c  readbin.c  readidf.c  sauce.c  sauce.h
