# run this with automake to generate Makefile.in
EXTRA_DIST = INSTALL README TODO \
php/config.h.in \
php/install-sh \
php/config.w32 \
php/config.nice \
php/CREDITS \
php/tests \
php/tests/001.phpt \
php/config.guess \
php/php_ansiconv.h \
php/config.h \
php/ansiconv.c \
php/Makefile.global \
php/mkinstalldirs \
php/configure.in \
php/missing \
php/modules \
php/aclocal.m4 \
php/config.sub \
php/acinclude.m4 \
php/ltmain.sh \
php/build/mkdep.awk \
php/build/shtool \
php/build/libtool.m4 \
php/build/scan_makefile_in.awk \
php/configure \
php/config.m4

SUBDIRS = src
