dnl Process this file with autoconf to produce a configure script.
AC_INIT(src/ansiconv.c)
AM_INIT_AUTOMAKE(ansiconv, 1.7)

dnl Checks for programs.
AC_PROG_CC

dnl Make all the subdir progs
AC_PROG_MAKE_SET

dnl Get command line options
AC_ARG_ENABLE(altcolors,altcolors: Enable an alternate color table,
              AC_DEFINE(ALT_COLORS))

dnl Checks for libraries.
AC_CHECK_LIB(gif,  EGifOpenFileHandle,
             AC_DEFINE(HAVE_LIBGIF)
             LIBS="$LIBS -lgif",,)

AC_CHECK_LIB(png,  png_create_write_struct,
             AC_DEFINE(HAVE_LIBPNG) 
             LIBS="$LIBS -lpng -lz -lm",
             ,-lz -lm)

dnl Checks for header files.
AC_HEADER_STDC
AC_CHECK_HEADERS(getopt.h)

dnl Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST

dnl Checks for library functions.

AC_OUTPUT(Makefile src/Makefile)
