dnl Process this file with autoconf to produce a configure script.
AC_INIT(src/ansiconv.c)
AM_INIT_AUTOMAKE(ansiconv, 1.8)

dnl Checks for programs.
AC_PROG_CC

dnl Make all the subdir progs
AC_PROG_MAKE_SET

dnl Checks for libraries.
AC_CHECK_LIB(gif,  EGifOpenFileHandle,
             AC_DEFINE(HAVE_LIBGIF)
             has_output=yes
             LIBS="$LIBS -lgif",
             AC_MSG_WARN(GIF Output disabled),)

AC_CHECK_LIB(png,  png_create_write_struct,
             AC_DEFINE(HAVE_LIBPNG) 
             has_output=yes
             LIBS="$LIBS -lpng -lz -lm",
             AC_MSG_WARN(PNG Output disabled), -lz -lm)

if test "x$has_output" != "xyes"; then
    AC_MSG_ERROR(No output module compiled!) 
fi

dnl Checks for header files.
AC_HEADER_STDC
AC_CHECK_HEADERS(getopt.h)

dnl Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST

dnl Checks for library functions.

AC_OUTPUT(Makefile src/Makefile)
