## Process this file with automake to produce Makefile.in

cgiexecdir = $(prefix)/httpd/cgi-bin
cgiexec_PROGRAMS = ansiview.cgi 

ansiview_cgi_SOURCES = ansiconv.c ansiparse.c readbin.c \
                       readidf.c dosfont.c sauce.c output.c \
                       outputlo.c outputgif.c outputpng.c \
                       list.c list.h dosfont.h output.h \
                       outputgif.h outputpng.h sauce.h
